fixed menue icon not changing after navigation on mobile

--- a/src/components/Button/Button.css
+++ b/src/components/Button/Button.css
@@ -68,5 +68,7 @@
     }
 }
 @media (max-width: 660px) {
-    .contact-button {margin-top: 0;}
+    .contact-button {
+        margin-top: 0;
+    }
 }
